# hft-sim

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/common/: logging.hpp  spsc_queue.hpp  types.hpp
include/gateway/: gateway_sim.hpp
include/market/: market_data.hpp  matching_engine.hpp  order.hpp  order_book.hpp  simulator.hpp
include/risk/: risk_manager.hpp
include/strategy/: mean_reversion.hpp  strategy.hpp
src/app/: hft_main.cpp  sim_main.cpp
src/common/: logging.hpp  spsc_queue.hpp  types.hpp
src/gateway/: gateway_sim.cpp  gateway_sim.hpp
src/market/: market_data.hpp  matching_engine.cpp  matching_engine.hpp  order.hpp  order_book.hpp  simulator.cpp  simulator.hpp
src/risk/: risk_manager.cpp  risk_manager.hpp
src/strategy/: mean_reversion.cpp  mean_reversion.hpp  strategy.hpp
tests/: functional_scenarios.cpp
tests/unit/: engine_thread_tests.cpp  matching_engine_tests.cpp  mean_reversion_tests.cpp  order_book_tests.cpp  risk_manager_tests.cpp  simulator_tests.cpp  spsc_queue_tests.cpp
